tests-system/record-reference-1/output
link.value == value, "potato"
^^^^ record-reference-1/test.rsl:9: issue: expression could be null [vcg-evaluation-of-null]
   | example record_type triggering error:
   |   T bad_potato {
   |     value = 0
   |     /* link is null */
   |   }
T R1 {
  ^^ record-reference-1/test.trlc:3: check error: potato
T R2 {
  ^^ record-reference-1/test.trlc:8: check error: potato
link.value == value, "potato"
^^^^ record-reference-1/test.rsl:9: error: null dereference
Processed 1 model and 1 requirement file and found 1 warning and 3 errors
